Issue IMCMS-464: Menu tag - Leaves visible content even if empty - Add display for to label

--- a/src/main/webapp/css/imcms-editor_area.css
+++ b/src/main/webapp/css/imcms-editor_area.css
@@ -28,6 +28,10 @@
     display: block;
 }
 
+.imcms-editor-area--menu:hover .imcms-editor-area__text-label {
+    display: block;
+}
+
 .imcms-editor-area--text.imcms-editor-area--active .imcms-editor-area__text-label {
     display: none;
 }
